feat: add ui and scrollarea

--- a/components.json
+++ b/components.json
@@ -11,7 +11,7 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@/shared",
+    "components": "src/shared",
     "utils": "@/shared/ui/util"
   }
 }
